data/derived/comb/progs/unify/prog4781.ml.out
Characters 79-80:
  List.fold_left f base xs;;
                 ^
Error: This expression has type int -> 'a -> 'b -> 'c -> int
       but an expression was expected of type int -> 'a -> int
       Type 'b -> 'c -> int is not compatible with type int 
